--- a/config/bt60_v1_hs.conf
+++ b/config/bt60_v1_hs.conf
@@ -1,5 +1,5 @@
 # Put configuration options here
-CONFIG_ZMK_KEYBOARD_NAME="Michael's KBD"
+CONFIG_ZMK_KEYBOARD_NAME="Jyoosi Keeb"
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_USB_HID_POLL_INTERVAL_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
